Fix related cards collapse #11822

--- a/client/app/card/card.component.scss
+++ b/client/app/card/card.component.scss
@@ -42,7 +42,7 @@
     .body {
         display: grid;
         grid-template-rows: 0 1fr;
-        grid-template-columns: 400px 1fr;
+        grid-template-columns: 400px minmax(0, 1fr);
 
         .image-container {
             display: flex;
