--- a/client/app/shared/components/related-cards/related-cards.component.scss
+++ b/client/app/shared/components/related-cards/related-cards.component.scss
@@ -8,6 +8,7 @@
     height: 120px;
     &.reduced {
         height: 0;
+        overflow: hidden;
         .btn-reduce {
             bottom: 10px;
             mat-icon {
